[tool.poetry]
name = "py-srv-matrix-synapse"
version = "0.1.0"
description = ""
authors = ["Evan Sarmiento <evansarm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matrix-synapse = "^1.104.0"
lxml = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
